[gd_scene load_steps=2 format=3 uid="uid://bnrrs3gvq7khm"]

[ext_resource type="Script" path="res://scenes/speed_ui.gd" id="1_e1cre"]

[node name="SpeedUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
mouse_filter = 2
script = ExtResource("1_e1cre")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 180.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Speed "

[node name="Speed1" type="Button" parent="Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "  >  "

[node name="Speed2" type="Button" parent="Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = " >> "

[node name="Speed3" type="Button" parent="Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ">>>"

[connection signal="mouse_entered" from="Panel/MarginContainer/HBoxContainer/Speed1" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="Panel/MarginContainer/HBoxContainer/Speed1" to="." method="_on_mouse_exit"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/Speed1" to="." method="_on_speed_1_pressed"]
[connection signal="mouse_entered" from="Panel/MarginContainer/HBoxContainer/Speed2" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="Panel/MarginContainer/HBoxContainer/Speed2" to="." method="_on_mouse_exit"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/Speed2" to="." method="_on_speed_2_pressed"]
[connection signal="mouse_entered" from="Panel/MarginContainer/HBoxContainer/Speed3" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="Panel/MarginContainer/HBoxContainer/Speed3" to="." method="_on_mouse_exit"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/Speed3" to="." method="_on_speed_3_pressed"]
